# voltfi_analytics

./: .env  .env.example  Cargo.toml  README.md  a
src/: config.rs  db.rs  main.rs  models.rs  sync.rs
src/routes/: business.rs  mod.rs  onchain.rs  ops.rs  overview.rs  users.rs
static/: index.html
static/css/: style.css
static/js/: app.js  charts.js
